css/style.css
html, body {
  margin: 0;
  padding: 0;
  color: #fff;
  font: 16px sans-serif;
  line-height: 2;
}
html {
  color: #fff;
  background: #000 url(../images/coal_block.png);
}
#game {
 max-width: 1080px;
 margin: 0 auto;
}
#winner {
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 50;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0, 0, 0, .75);
}
#winner.hidden {
  display: none;
}
canvas {
  display: none;
}
img {
  display: block;
  max-width: 100%;
  margin: 0 auto;
  image-rendering: pixelated;
}
h1 {
  font-weight: normal;
  text-align: center;
}
button {
  display: block;
  margin: 16px auto;
  border: none;
  color: white;
  padding: 15px 32px;
  cursor: pointer;
  background: url(../images/dark_oak_planks.png);
}
button:hover {
  background: url(../images/dark_oak_planks_08.png);
}

#logo {
  margin: 32px auto;
}
#log {
  padding: 8px 24px;
  margin: 16px 16px 0 16px;
  background: url(../images/dark_oak_planks.png);
}
.centered {
  text-align: center;
}
.defaultMargin {
  margin: 16px 16px 0 16px;
}
.horizontal {
  margin: 0 16px;
}
.grid {
  display: grid;
  grid-template-columns: 100%;
}
.scrollBox {
  min-height: 200px;
  width: calc(100% - 64px);
  padding: 16px;
  margin: 16px 16px 0 16px;
  background: url(../images/dark_oak_planks.png);
}
.item:hover {
  background: rgba(255, 255, 255, .08);
}
.selected, .item.selected {
  background: rgba(255, 255, 255, .16);
}
#run.disabled {
  cursor: not-allowed;
}
i.heart, i.energy, i.none, i.hoe, i.pickaxe, i.shovel, i.sword, i.axe  {
  display: inline-block;
  vertical-align: middle;
  height: 24px;
  width: 24px;
  background-size: cover;
}
i.heart {
  background-image: url(../images/heart.png);
}
i.energy {
  background-image: url(../images/energy.png);
}
i.none {
  background-image: url(../images/stick.png);
}
i.hoe {
  background-image: url(../images/iron_hoe.png);
}
i.pickaxe {
  background-image: url(../images/iron_pickaxe.png);
}
i.shovel {
  background-image: url(../images/iron_shovel.png);
}
i.sword {
  background-image: url(../images/iron_sword.png);
}
i.axe {
  background-image: url(../images/iron_axe.png);
}
i.hero, i.hero2, i.monster, i.monster2, i.monster3, i.monster4, i.monster5, i.monster6 {
    display: inline-block;
    vertical-align: text-top;
    height: 16px;
    width: 16px;
    margin: 0 8px;
    background-size: cover;
}
i.hero {
  background-image: url(../images/hero.png);
}
i.hero2 {
  background-image: url(../images/hero2.png);
}
i.monster {
  background-image: url(../images/monster.png);
}
i.monster2 {
  background-image: url(../images/monster2.png);
}
i.monster3 {
  background-image: url(../images/monster3.png);
}
i.monster4 {
  background-image: url(../images/monster4.png);
}
i.monster5 {
  background-image: url(../images/monster5.png);
}
i.monster6 {
  background-image: url(../images/monster6.png);
}

#winnerIcon {
  width: 192px;
}


@media screen and (min-width: 720px){
  .grid {
    grid-template-columns: 50% 50%;
  }
  .horizontal {
    margin: 16px 16px 0 16px;
  }
}
@media screen and (min-width: 720px) and (min-height: 720px) {
  html {
    width: 100%;
    height: 100%;
    position: absolute;
  }
  body {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
  }
}

